--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,6 +9,12 @@ RUN pipx install poetry && pipx install mypy && pipx install ruff && pipx instal
 
 # copies the requirements file from the project root to the container and installs it
 # copy "noop.txt" so the COPY instruction does not fail if no requirements.txt exists.
-COPY requirements.txt* .devcontainer/noop.txt /tmp/pip-tmp/
-RUN if [ -f "/tmp/pip-tmp/requirements.txt" ]; then pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt; fi \
-    && rm -rf /tmp/pip-tmp
+# COPY requirements.txt* .devcontainer/noop.txt /tmp/pip-tmp/
+# RUN if [ -f "/tmp/pip-tmp/requirements.txt" ]; then pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt; fi \
+#     && rm -rf /tmp/pip-tmp
+
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y libmagic-dev poppler-utils tesseract-ocr tesseract-ocr-por libreoffice graphviz graphviz-dev
+
+CMD ["bash"]
