--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Rhuan Barros <rhuanbarros@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-ragas = "^0.1.21"
+python = ">=3.11,<3.13"
 ipykernel = "^6.29.5"
+python-dotenv = "^1.0.1"
+unstructured = {extras = ["all-docs"], version = "^0.15.13"}
 
 
 [build-system]
