rag basic working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ bs4 = "^0.0.2"
 tiktoken = "^0.8.0"
 langchain-google-genai = "^2.0.1"
 weaviate-client = "^4.8.1"
+langchain-weaviate = "^0.0.3"
+gpt4all = "^2.8.2"
 
 
 [build-system]
