--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ langchain-weaviate = "^0.0.3"
 gpt4all = "^2.8.2"
 gradio = "^5.0.1"
 pydantic = "^2.9.2"
+pymupdf = "^1.24.11"
+langchain-text-splitters = "^0.3.0"
 
 
 [build-system]
